--- a/frontend/src/components/ReleaseList/SideBars/index.scss
+++ b/frontend/src/components/ReleaseList/SideBars/index.scss
@@ -1,7 +1,7 @@
 .SideBars {
   display: flex;
   flex-flow: row nowrap;
-  position: sticky;
+  position: fixed;
   top: 50px;
   left: 0;
   height: calc(100vh - 110px);
@@ -59,8 +59,10 @@
 
 .HideBars {
   width: 22px;
-  position: sticky;
+  position: fixed;
   z-index: 95;
+  height: calc(100vh - 110px);
+  top: 50px;
 
   .Vertical {
     margin-top: 45px;
@@ -73,7 +75,7 @@
       display: flex;
       flex-flow: nowrap;
       padding: 2px 5px;
-      margin-right: 10px;
+      margin-right: 5px;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
 
