--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -6,8 +6,9 @@
   /* TODO: Figure out a way to @apply these... */
   --color-fg: #ffffff; /* white */
   --color-fg-alt: #f7fafc; /* gray-100 */
-  --color-bg: #161616;
-  --color-bg-alt: #000000;
+  --color-bg: #101013;
+  --color-bg-alt: #18181d;
+  --color-bg-alt2: #202026;
   --color-bg-embellish: #523d20; /* gold-800 */
   --color-highlight: #6e522a; /* gold-700 */
   --color-bold: #b78846; /* gold-500 */
@@ -15,6 +16,9 @@
 }
 
 html {
+  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
   --lh: 1.4rem;
   line-height: var(--lh);
   @apply text-fg;
@@ -22,16 +26,19 @@ html {
 
 .app {
   background-color: var(--color-bg);
-  background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox='0 0 12 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 .99C4 .445 4.444 0 5 0c.552 0 1 .45 1 .99v4.02C6 5.555 5.556 6 5 6c-.552 0-1-.45-1-.99V.99zm6 8c0-.546.444-.99 1-.99.552 0 1 .45 1 .99v4.02c0 .546-.444.99-1 .99-.552 0-1-.45-1-.99V8.99z' fill='%23523d20' fill-opacity='0.19' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 button,
 input {
-  @apply rounded px-4 py-2;
+  @apply px-4 py-2;
+}
+
+button {
+  @apply rounded;
 }
 
 input {
-  @apply bg-transparent border-2 border-highlight;
+  @apply bg-transparent border-highlight border-b-2;
 }
 
 input::placeholder {
