--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -124,7 +124,7 @@ input::placeholder {
 
 .rpr--home-recently-added:after {
   content: '';
-  flex: 0 0 4.166666%;
+  flex: 0 0 2rem;
   margin: 0 0 0 -1rem;
 }
 
