--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -43,7 +43,7 @@ button {
 }
 
 button:hover {
-  @apply bg-white bg-opacity-5;
+  @apply bg-black bg-opacity-5 dark:bg-white dark:bg-opacity-5;
 }
 
 .text-btn {
