fix some useEffect dependency arrays

--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -16,7 +16,7 @@ html {
   --color-foreground-alt: #f9fafb; /* gray-50 */
   --color-background: #101013;
   --color-background-alt: #18181d;
-  --color-background-alt2: #1e1e26;
+  --color-background-alt2: #1b1b21;
   --color-primary: #daa520; /* gold-400 */
   --color-primary-alt: #b78846; /* gold-500 */
   --color-primary-alt2: #6e522a; /* gold-700 */
