fix a lot of miscellaneous styles across the application

--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -68,6 +68,10 @@ input::placeholder {
   @apply text-foreground-100;
 }
 
+input.searchbar::placeholder {
+  opacity: 70%;
+}
+
 .block-important {
   display: block !important; /* troll */
 }
