--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -29,14 +29,14 @@ html {
 
 .app.light {
   /* TODO: Figure out a way to @apply these... */
-  --color-foreground: #111827; /* coolgray-900 */
-  --color-foreground-100: #1f2937; /* coolgray-800 */
-  --color-foreground-200: #374151; /* coolgray-700 */
-  --color-foreground-300: #4b5563; /* coolgray-600 */
-  --color-foreground-400: #6b7280; /* coolgray-500 */
-  --color-background-700: #f9fafb; /* coolgray-50 */
-  --color-background-800: #e5e7eb; /* coolgray-200 */
-  --color-background-900: #d1d5db; /* coolgray-300 */
+  --color-foreground: #111827; /* gray-900 */
+  --color-foreground-100: #1f2937; /* gray-800 */
+  --color-foreground-200: #374151; /* gray-700 */
+  --color-foreground-300: #4b5563; /* gray-600 */
+  --color-foreground-400: #6b7280; /* gray-500 */
+  --color-background-700: #f9fafb; /* gray-50 */
+  --color-background-800: #e5e7eb; /* gray-200 */
+  --color-background-900: #d1d5db; /* gray-300 */
   --color-primary-400: #523d20;
   --color-primary-500: #6e522a;
   --color-primary-600: #96703a;
@@ -176,17 +176,14 @@ input.searchbar::placeholder {
 }
 
 .star-active {
-  fill: var(--color-primary-400);
+  @apply fill-current text-primary-400;
 }
 .star-inactive {
-  stroke: #6b7280;
-  fill: rgba(0, 0, 0, 0);
+  @apply text-gray-500 stroke-current fill-transparent;
 }
 .release-ratings:hover > .star {
-  fill: var(--color-primary-400);
-  stroke: var(--color-primary-400);
+  @apply fill-current stroke-current text-primary-400;
 }
 .release-ratings:hover > .star:hover ~ .star {
-  fill: rgba(0, 0, 0, 0);
-  stroke: #6b7280;
+  @apply text-gray-500 stroke-current fill-transparent;
 }
