--- a/frontend/src/index.tailwind.css
+++ b/frontend/src/index.tailwind.css
@@ -25,23 +25,7 @@ html {
   --color-primary-600: #96703a;
   --color-primary-700: #6e522a;
   --color-primary-800: #523d20;
-}
-
-.app.light {
-  /* TODO: Figure out a way to @apply these... */
-  --color-foreground: #111827; /* gray-900 */
-  --color-foreground-100: #1f2937; /* gray-800 */
-  --color-foreground-200: #374151; /* gray-700 */
-  --color-foreground-300: #4b5563; /* gray-600 */
-  --color-foreground-400: #6b7280; /* gray-500 */
-  --color-background-700: #f9fafb; /* gray-50 */
-  --color-background-800: #e5e7eb; /* gray-200 */
-  --color-background-900: #d1d5db; /* gray-300 */
-  --color-primary-400: #523d20;
-  --color-primary-500: #6e522a;
-  --color-primary-600: #96703a;
-  --color-primary-700: #a47b40;
-  --color-primary-800: #b78846;
+  --color-gray-500: #6b7280;
 }
 
 * {
